--- a/week-1-offline-public-key-cryptography/package.json
+++ b/week-1-offline-public-key-cryptography/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@noble/ed25519": "^1.7.1"
+    "@noble/ed25519": "^1.7.1",
+    "@solana/web3.js": "^1.95.2",
+    "tweetnacl": "^1.0.3"
   }
 }
