--- a/Week-12- Creating a Liquidity pool in Solana Confirmation/package.json
+++ b/Week-12- Creating a Liquidity pool in Solana Confirmation/package.json
@@ -13,7 +13,8 @@
     "@solana/spl-token": "^0.4.9",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vite-plugin-node-polyfills": "^0.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
