--- a/Bonkbot/http/package.json
+++ b/Bonkbot/http/package.json
@@ -10,7 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.22.0",
+    "@solana/web3.js": "^1.95.5",
     "@types/express": "^5.0.0",
-    "express": "^4.21.1"
+    "@types/jsonwebtoken": "^9.0.7",
+    "bs58": "^6.0.0",
+    "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.22.0"
   }
 }
