--- a/Bonkbot/http/package.json
+++ b/Bonkbot/http/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@solana/web3.js": "^1.95.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "bs58": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.22.0"
